# generic_data_structures_algorithms_C

./: CMakeLists.txt  main.c
generic-array-list/: generic-array-list-app.h  generic-array-list.c  generic-array-list.h
generic-singly-linked-list/: generic-singly-linked-list-app.h  generic-singly-linked-list.c  generic-singly-linked-list.h
linked-lists/: generic-singly-linked-list-app.c  generic-singly-linked-list.c  generic-singly-linked-list.h
print_functions/: print_functions.c  print_functions.h
